Make compatible with authoring tool

--- a/less/sortable.less
+++ b/less/sortable.less
@@ -68,6 +68,7 @@
 .sortable-item {
 	position: relative;
 	padding: 15px;
+	margin-bottom: @item-margin-bottom;
 	background: @primary-color;
 	color: #ffffff;
 	cursor: move;
