Improve styling | refactor to AMD | move libraries to libraries folder

--- a/less/sortable.less
+++ b/less/sortable.less
@@ -72,6 +72,18 @@
 	background: @primary-color;
 	color: #ffffff;
 	cursor: move;
+	transition: 0.075s transform;
+	-moz-transition: 0.075s -moz-transform;
+	-webkit-transition: 0.075s -webkit-transform;
+
+	&.ui-sortable-helper {
+		box-shadow: 0 3px 10px rgba(0,0,0,0.5);
+		-webkit-transform: scale(1.01, 1.01);
+		-moz-transform: scale(1.01, 1.01);
+		-ms-transform: scale(1.01, 1.01);
+		-o-transform: scale(1.01, 1.01);
+		transform: scale(1.01, 1.01);
+	}
 }
 
 .sortable-item-text {
