:pencil2: Remove test class

--- a/templates/sortable.hbs
+++ b/templates/sortable.hbs
@@ -1,4 +1,4 @@
-<div class="sortable-inner component-inner outside-test">
+<div class="sortable-inner component-inner">
     {{> component this}}
     <div class="sortable-widget component-widget {{#unless _isEnabled}} disabled {{#if _isComplete}} complete submitted user {{#if _isCorrect}}correct{{/if}} {{/if}} {{/unless}}">
 
