--- a/less/sortable.less
+++ b/less/sortable.less
@@ -1,7 +1,7 @@
 .sortable-widget {
 	&.submitted {
 		.sortable-item {
-			background-color: @item-color-disabled;
+			background-color: @disabled;
 		}
 	}
 
@@ -49,12 +49,12 @@
 	}
 
 	.sortable-correct-icon {
-		color: @icon-correct-color;
+		color: @validation-success;
 		display: none;
 	}
 
 	.sortable-incorrect-icon {
-		color: @icon-incorrect-color;
+		color: @validation-error;
 		display: none;
 	}
 }
@@ -72,8 +72,8 @@
 .sortable-item {
 	position: relative;
 	padding: 15px;
-	margin-bottom: @item-margin-bottom;
-	background: @primary-color;
+	margin-bottom: @item-margin;
+	background: @blueDark;
 	color: #ffffff;
 	cursor: move;
 	transition: 0.075s transform;
